syntax = "proto3";
package tx.pse.v1;

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";

option go_package = "github.com/tokenize-x/tx-chain/v6/x/pse/types";

// ClearingAccountMapping defines the mapping between a clearing account (module account) and its recipients (sub account multisig wallets).
// This mapping can be modified via governance proposals.
// Each clearing account must have at least one recipient address.
// During distribution, the allocated amount is split equally among all recipients.
message ClearingAccountMapping {
  // clearing_account is the name of the clearing account holding the tokens to be distributed.
  string clearing_account = 1 [
    (gogoproto.moretags) = "yaml:\"clearing_account\""
  ];

  // recipient_addresses is the list of multisig wallet addresses that will receive the token distributions.
  // Must have at least one address. Distribution amount is split equally among all recipients.
  repeated string recipient_addresses = 2 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.moretags) = "yaml:\"recipient_addresses\""
  ];
}

// ClearingAccountAllocation defines the amount to be allocated from a specific clearing account (module account).
message ClearingAccountAllocation {
  // clearing_account is the name of the clearing account (module account).
  string clearing_account = 1 [
    (gogoproto.moretags) = "yaml:\"clearing_account\""
  ];

  // amount is the number of tokens to allocate from this clearing account.
  // This amount is for the allocation denom (see AllocationDenom constant).
  string amount = 2 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"amount\""
  ];
}

// ScheduledDistribution defines a single allocation event at a specific timestamp.
// Multiple clearing accounts can allocate tokens at the same time.
message ScheduledDistribution {
  // timestamp is when this allocation should occur (Unix timestamp in seconds).
  uint64 timestamp = 1 [
    (gogoproto.moretags) = "yaml:\"timestamp\""
  ];

  // allocations is the list of amounts to allocate from each clearing account at this time.
  repeated ClearingAccountAllocation allocations = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"allocations\""
  ];
}

// CommunityDistributionJob tracks an in-progress community distribution batch job.
message CommunityDistributionJob {
  // scheduled_at is the Unix timestamp of the distribution period being paid out.
  uint64 scheduled_at = 1 [
    (gogoproto.moretags) = "yaml:\"scheduled_at\""
  ];

  // total_amount is the total amount to distribute for this period.
  string total_amount = 2 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"total_amount\""
  ];

  // total_score is the sum of all eligible delegator scores at snapshot time.
  string total_score = 3 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"total_score\""
  ];

  // leftover tracks undistributed amount to be sent to the community pool at completion.
  string leftover = 4 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"leftover\""
  ];

  // next_address is the exclusive cursor for the next delegator to process.
  // Empty means start from the beginning of the address-ordered map.
  string next_address = 5 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.moretags) = "yaml:\"next_address\""
  ];

  // total_entries is the number of delegators included in this snapshot.
  uint64 total_entries = 6 [
    (gogoproto.moretags) = "yaml:\"total_entries\""
  ];

  // processed_entries is the number of delegators already processed.
  uint64 processed_entries = 7 [
    (gogoproto.moretags) = "yaml:\"processed_entries\""
  ];
}

// CommunityDistributionEntry stores a delegator score for a snapshot period.
message CommunityDistributionEntry {
  string delegator_address = 1 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.moretags) = "yaml:\"delegator_address\""
  ];

  string score = 2 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"score\""
  ];
}

